--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Isabella Chenhall's Resumé</title>
   </head>
   <!-- End of the head -->
 
@@ -43,14 +43,14 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait.svg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/Profile_img.jpg" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Isabella Chenhall</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h1 class="fw-bolder chewy-regular">Isabella Chenhall</h1>
+          <h5 class="fst-italic tagline title-colour">Student in TV Production and Creative Business</h5>
         </div>
       </header>
 
@@ -69,8 +69,8 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section">
-            <h2>Professional Experience</h2>
+          <section class="my-3 biography-section ">
+            <h2> Professional Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -84,13 +84,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>2024 US Election Coverage for Bournemouth University</h4>
+                  <h5>6 November 2024&nbsp;</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>PA for timings on a 24 hour shoot&nbsp;</li>
+                    <li>Professional camera operating skills</li>
+                    <li>Experience in a formal broadcasting environment&nbsp;&nbsp;</li>
                   </ul>
                 </div>
               </li>
@@ -99,14 +99,20 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>The Artist as a Public Intellectual&nbsp;</h4>
+                  <h5>28 November 2024</h5>
+					 <ul class="biography-details list-unstyled">
+                    <li>Professional camera operating skills</li>
+                    <li>Experience with broadcasting calls and live TV&nbsp;</li>
+                    <li>In co-operation with Universities accross the UK </li>
+                  </ul>
+					
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
-              </li>
+              </li> 
 
             </ul>
           </section>
@@ -120,16 +126,16 @@
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/bu-logo.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h4>BA in TV Production, Bournemouth University&nbsp;&nbsp;</h4>
+                  <h5>2023 - 2026&nbsp;&nbsp;</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Experience with professional studio equipment</li>
+                    <li>Chosen studies in media ethics and camera evolution </li>
+                    <li>Created over 10 TV studio shows both live and as-live</li>
                   </ul>
                 </div>
               </li>
@@ -137,13 +143,15 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>BA in Creative Buisiness, Breda University of Applied Sciences</h4>
+                  <h5>2025 - now</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>&nbsp;As a part of Bournemouth University exchange programme</li>
+                    <li> Marketing and buisiness experience</li>
+                    <li>&nbsp;Experience working with real clients and audience research</li>
                   </ul>
                 </div>
               </li>
@@ -162,7 +170,7 @@
         <aside class="col-md-5 col-lg-4 col-xl-3 resume-aside">
 
           <!-- The first block will be contact details -->
-          <section class="my-3 aside-section">
+          <section class="my-3 aside-section ">
             <h2>Contact</h2>
             <!--
               A list of all your contact details.
@@ -172,27 +180,27 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:247252@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  247252@buas.nl
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
-                </a>
+                <a class="d-flex align-items-center" href="https://www.instagram.com/isabellachenhall/" target="_blank">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
+                Instagram Profile
+              </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/IsabellaChenhall" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                <a class="d-flex align-items-center" href="https://www.behance.net/bellachenhall" target="_blank">
+                  <img class="contact-icon" src="images/icons/behance.svg" alt="Mobile Phone">
+                  Behance Profile
                 </a>
               </li>
             </ul>
@@ -205,34 +213,26 @@
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Dutch</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50">English&nbsp;</h5>
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
+                  <div class="language-progress position-absolute bg-success h-100 w-100"></div>
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">English</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50">French</h5>
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
+                  <div class="language-progress position-absolute bg-success h-100 w-25"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50">Dutch</h5>
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
+                  <div class="language-progress position-absolute bg-success h-100 w-25"></div>
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
                 </div>
               </li>
@@ -244,8 +244,8 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
+              <li class="skill-item">Adobe and Avid proficient&nbsp;&nbsp;</li>
+              <li class="skill-item">PADI diving qualification</li>
               <li class="skill-item">Driving Licence</li>
             </ul>
           </section>
@@ -255,8 +255,11 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Analogue and digital photography&nbsp;&nbsp;</li>
+              <li class="skill-item">Diving and wild swimming</li>
+              <li class="skill-item">Hiking</li>
+              <li class="skill-item">Crochet and knitting</li>
+              <li class="skill-item">Piano&nbsp;</li>
             </ul>
           </section>
 
